* Add option parser to get modules from XML-RPC server
* Removed sphinxcontrib-inheritance from requirements

Version 0.4 2013-11-13
* Package provide scripts to bootstrap and mantain the sphinx project

Version 0.3 - 2013-06-04
* Implemented *class* option for all trydoc directives

Version 0.2 - 2013-02-25
* Configuration option to define the list of modules to install in a ':module:'
  database (sqlite).

Version 0.1
* Initial release
