@@ -1,5 +1,8 @@
 * Add option parser to get modules from XML-RPC server
 * Removed sphinxcontrib-inheritance from requirements
+* First functional version of view directive (screenshot) without support for
+  "field" attribute, support of empty forms nor a way to define which record
+  use.
 
 Version 0.4 2013-11-13
 * Package provide scripts to bootstrap and mantain the sphinx project
